--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -3,19 +3,10 @@
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
 
-# main:
-#   - name: Team
-#     url: '#team'
-#     weight: 10
-#   - name: Grants
-#     url: '#grants'
-#     weight: 20
-#   - name: Publications
-#     url: 'publication'
-#     weight: 30
-
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-#  - name: CV
-#    url: uploads/resume.pdf
-#    weight: 70
+ main:
+   - name: Projets ciblés
+     url: '/#projets-cibles'
+     weight: 10
+   - name: Appel à démonstrateurs
+     url: '/#appel-a-demonstrateurs'
+     weight: 20
