--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -11,7 +11,14 @@ copyright: "© {year} L´équipe NumPEx" # Footer text, e.g. '© {year} Me'
 ## LANGUAGE
 ############################
 
-defaultContentLanguage: fr
+defaultContentLanguage: en
+languages:
+  en:
+    title: NumPEx
+    contentDir: content/en
+  fr:
+    title: NumPEx
+    contentDir:content/fr
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
