--- a/config/_default/menus.fr.yaml
+++ b/config/_default/menus.fr.yaml
@@ -10,3 +10,6 @@
    - name: Appel à démonstrateurs
      url: '/#appel-a-demonstrateurs'
      weight: 20
+   - name: Recrutement
+     url: '/#jobs'
+     weight: 30
